--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: gh-deploy/dist/browser
+          folder: dist/gh-deploy/browser
           branch: prod  
           token: ${{ secrets.GH_TOKEN }}
